# maihem

./: .gitignore  LICENSE  README.md  config.yaml  decorator_learn.py  design_maihem_agent.py  design_maihem_dev_new.py  design_maihem_new.py  design_maihem_test.py  full_example.py  image_converter.py  impactai_api_client.py  persona_prompt_generator.py  pyproject.toml  run_maihem.py  setup.py  test.py  test_api.ipynb  test_api_client.py  test_app.py  test_client.py  test_flow.py  test_for_rosebud.py  test_local.py  test_local_demo.py  test_mh.py  test_rosebud.py  test_sdk_christos.py  test_sdk_edu.py  test_sdk_gabriele.py  test_workflow.py
examples/: conversation_evaluator.py  conversation_generator.py  demo_notebook.ipynb  demo_notebook_convgen.ipynb  demo_notebook_eval.ipynb  full_conversation_generator.py  initial_chat_generator.py  log_and_evalaute_convs.ipynb  persona_conversation_generator.py  persona_prompt_generator.py  simulate_and_evaluate_convs.ipynb
src/: config.yaml  design_maihem_test.py  maihem_config_dev_mode.yaml  maihem_config_test_mode.yaml  run_maihem.py  run_maihem_dev.py  run_maihem_dev_config.py  run_maihem_test.py  run_maihem_test_config.py  test_flow_rosebud.py  test_local.py
src/maihem/: __init__.py  agents.py  api.py  cli.py  clients.py  clients_old.py  decorator.py  errors.py  evaluators.py  functions.py  generator.py  image_parser.py  logger.py  modules_map.py  old_functions.py  otel_client.py  simulator.py  test_objects.py  utils.py
src/maihem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/maihem/api_client/: README.md  pyproject.toml
src/maihem/api_client/maihem_client/: __init__.py
src/maihem/api_client/maihem_client/models/: __init__.py  admin_evaluation_review_create_request.py  admin_evaluation_review_edit_request.py  admin_test_result_metric_review_create_request.py  admin_test_result_metric_review_edit_request.py  agent_maihem_role.py  agent_target.py  agent_target_create_request.py  agent_target_revision.py  agent_target_revision_create_request.py  agent_type.py  agents_set_active_agent_target_response_agents_set_active_agent_target.py  api_schema_agent_target.py  api_schema_agent_target_create_request.py  api_schema_agent_target_create_response.py  api_schema_agent_target_get_response.py  api_schema_conversation_turn_create_request.py  api_schema_conversation_turn_create_request_document_type_0.py  api_schema_conversation_turn_create_response.py  api_schema_links.py  api_schema_metric.py  (+135 more)
src/maihem/schemas/: agents.py  conversations.py  tests.py
src/maihem/shared/: lib
src/maihem/shared/lib/: errors.py  logger.py  request_context.py
src/maihem/utils/: documents.py  modules_map.py  registry.py  utils.py
test_sdk/: data.py  test_client.py  test_client_simon.py  test_dummy_workflow.py  wrappers.py
(+66 files in other folders)
