# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maihem"
version = "1.1.0"
description = "LLM evaluations and synthetic data generation with the MAIHEM models"
readme = "README.md"
authors = [{ name = "MAIHEM"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["genAI", "LLM", "evaluation", "data", "generation"]
dependencies = ["requests"]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/maihemlabs/maihem"